# llm_service_local

./: .dockerignore  .gitignore  README.md  install  pyproject.toml  test_llm.py
docker/: Dockerfile  docker-compose.langfuse.yaml  docker-compose.yaml
src/api/: deps.py  main.py  schemas.py
src/api/routers/: avto.py  chat.py  health.py
src/api/static/: index.html
src/application/agents/: aggregator_agent.py  intent_router.py  moderation_agent.py  query_agent.py  rag_agent.py  reranker_agent.py  sql_agent.py  writer_agent.py
src/application/dto/: moderation_dto.py  sql_query_dto.py  writer_dto.py
src/application/services/: chat_service.py
src/application/tools/: sql_search_tool.py  vector_search.py
src/application/workflows/: chat_graph.py  state.py
src/config/: settings.py
src/core/: llm.py
src/infrastructure/db/: chat_repository_impl.py  models.py  session.py  vector_repository_impl.py
src/infrastructure/llm/: embeddings.py  provider_factory.py
src/ingestion/: embedding_pipeline.py  ingestion_runner.py
src/prompts/: moderation.txt  rag.txt  sql_agent.txt  writer.txt
